# robotics-playbox-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run_clang_format.sh
doc/snippets/: BulletIntegration.cpp  DartIntegration.cpp  EigenIntegration.cpp  GlmIntegration.cpp  ImGuiIntegration-sdl2.cpp  ImGuiIntegration.cpp  OvrIntegration.cpp
package/debian/: rules
src/: CMakeLists.txt
src/Magnum/BulletIntegration/: DebugDraw.cpp  DebugDraw.h  Integration.h  MotionState.cpp  MotionState.h  visibility.h
src/Magnum/BulletIntegration/Test/: DebugDrawTest.cpp  IntegrationTest.cpp  MotionStateTest.cpp
src/Magnum/DartIntegration/: ConvertShapeNode.cpp  ConvertShapeNode.h  DartIntegration.h  Object.cpp  Object.h  World.cpp  World.h  visibility.h
src/Magnum/DartIntegration/Test/: ConvertShapeNodeTest.cpp  WorldGLTest.cpp  common.h
src/Magnum/EigenIntegration/: GeometryIntegration.h  Integration.h
src/Magnum/EigenIntegration/Test/: GeometryIntegrationTest.cpp  IntegrationTest.cpp
src/Magnum/GlmIntegration/: GtcIntegration.h  GtxIntegration.h  Integration.cpp  Integration.h  visibility.h
src/Magnum/GlmIntegration/Test/: GtcIntegrationTest.cpp  GtxIntegrationTest.cpp  IntegrationTest.cpp
src/Magnum/ImGuiIntegration/: CEM.hpp  CMakeLists.txt  Context.cpp  Context.h  Context.hpp  Integration.h  TrajectoryTypes.hpp  Widgets.h  visibility.h
src/Magnum/ImGuiIntegration/Test/: ApplicationTest copy.cpp  ApplicationTest.cpp  ContextGLTest.cpp  ContextTest.cpp  IntegrationTest.cpp  UserConfigTest.cpp  WidgetsGLTest.cpp
src/Magnum/OvrIntegration/: Compositor.cpp  Compositor.h  Context.cpp  Context.h  Conversion.h  Enums.cpp  Enums.h  Integration.h  OvrIntegration.h  Session.cpp  Session.h  visibility.h
src/Magnum/OvrIntegration/Test/: EnumsTest.cpp  IntegrationTest.cpp
src/Magnum/Test/: VersionTest.cpp
src/MagnumExternal/: CMakeLists.txt
src/gui_application/: CMakeLists.txt  TrajectoryTypes.hpp  add.cpp  add.cu  base_example.cpp  base_example.hpp  cem_mpc.cpp  cem_mpc.hpp  cem_mpc.tpp  cem_mpc_example.cpp  cem_mpc_example.hpp  finite_diff.hpp  finite_diff_test.cpp  finite_diff_tst.cpp  graphics_objects.cpp  graphics_objects.hpp  gui_application.cc  gui_application.hh  ilqr_main.cpp  ilqr_main.hpp  ilqr_mpc.cpp  ilqr_mpc.hpp  ilqr_mpc.tpp  intelligent_driver_model.hpp  julia.cu  lane_map_test.cpp  main.cpp  math.cpp  math.hpp  olc_example.cpp  template_example.cpp  template_example.hpp  track.csv  tsdf_example.cpp  tsdf_example.hpp  types.hpp
src/gui_application/base_application/: CMakeLists.txt  base_application.cpp  base_application.hpp
src/gui_application/cem_mpc/: CMakeLists.txt  cem_mpc.cpp  cem_mpc.h  cem_mpc.hpp  cem_mpc.tpp  cem_mpc_application.cpp  cem_mpc_application.hpp  cem_mpc_inl.h  cem_mpc_racing_app.cpp  cem_mpc_racing_app.hpp  cost_function.hpp  intelligent_driver_model.hpp  kinematic_bicycle_cem_viewer.hpp
src/gui_application/common/: CMakeLists.txt  book.h  containers.h  cpu_bitmap.h  dynamics.h  dynamics.hpp  finite_diff.hpp  gl_helper.h  math.cpp  math.hpp  types.hpp
src/gui_application/environment/: CMakeLists.txt  lane_map.cpp  lane_map.hpp  lane_map_viewer.hpp  track.hpp  track_utiilities.hpp
src/gui_application/example_application/: CMakeLists.txt  example_application.cpp  example_application.hpp
src/gui_application/geometry/: CMakeLists.txt  geometry.cpp  geometry.hpp
src/gui_application/graphics/: CMakeLists.txt  graphics_objects.cpp  graphics_objects.hpp
src/gui_application/ilqr_mpc/: CMakeLists.txt  ilqr_application.cpp  ilqr_application.hpp  ilqr_mpc.cpp  ilqr_mpc.hpp
src/gui_application/tests/: CMakeLists.txt
src/gui_application/tsdf_application/: CMakeLists.txt  tsdf_application.cpp  tsdf_application.hpp
